--- a/math_model.ipynb
+++ b/math_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -353,6 +353,258 @@
     "zip_medians = z_2020.merge(z_2019, on='COMMUNITYDISTRICT')\n",
     "zip_medians.to_csv('cds.csv', index=False)\n",
     "zip_medians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>INCIDENT_RESPONSE_SECONDS_QY</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>INCIDENT_DISPATCH_AREA</th>\n",
+       "      <th>COMBO</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M1</th>\n",
+       "      <th>1</th>\n",
+       "      <td>16196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>10848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M3</th>\n",
+       "      <th>1</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M4</th>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M5</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M6</th>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M7</th>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M8</th>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">M9</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18514</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              INCIDENT_RESPONSE_SECONDS_QY\n",
+       "INCIDENT_DISPATCH_AREA COMBO                              \n",
+       "M1                     1                             16196\n",
+       "                       2                                16\n",
+       "                       3                                 5\n",
+       "                       4                                12\n",
+       "M2                     1                             10848\n",
+       "                       2                             13771\n",
+       "                       3                                60\n",
+       "                       4                                35\n",
+       "M3                     1                                23\n",
+       "                       2                             23333\n",
+       "                       3                               105\n",
+       "                       4                                15\n",
+       "M4                     1                                 4\n",
+       "                       2                                 8\n",
+       "                       3                             10907\n",
+       "                       4                                27\n",
+       "M5                     1                                 2\n",
+       "                       2                               114\n",
+       "                       3                             14293\n",
+       "                       4                                60\n",
+       "M6                     1                                 3\n",
+       "                       2                                 1\n",
+       "                       3                                 9\n",
+       "                       4                              5284\n",
+       "M7                     1                                 5\n",
+       "                       2                                14\n",
+       "                       3                             13062\n",
+       "                       4                              6045\n",
+       "M8                     1                                 3\n",
+       "                       2                                 2\n",
+       "                       3                                 6\n",
+       "                       4                              8440\n",
+       "M9                     1                                 2\n",
+       "                       2                                 2\n",
+       "                       3                                 6\n",
+       "                       4                             18514"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset = df_2020[['INCIDENT_DISPATCH_AREA', 'INCIDENT_RESPONSE_SECONDS_QY', 'COMMUNITYDISTRICT']].dropna()\n",
+    "subset['TEST'] = [x[:-1] for x in subset['INCIDENT_DISPATCH_AREA']]\n",
+    "subset = subset.loc[subset['TEST'] == 'M']\n",
+    "communities = [subset['COMMUNITYDISTRICT'].unique(), [1, 3, 3, 2, 1, 2, 4, 1, 4, 2, 3, 4, 5]]\n",
+    "communities = pd.DataFrame({'COMMUNITYDISTRICT': communities[0], 'COMBO': communities[1]})\n",
+    "communities = communities.loc[communities['COMBO']!=5]\n",
+    "\n",
+    "combo = subset.merge(communities, on='COMMUNITYDISTRICT')[['INCIDENT_DISPATCH_AREA', 'INCIDENT_RESPONSE_SECONDS_QY', 'COMBO']]\n",
+    "combo.groupby(['INCIDENT_DISPATCH_AREA', 'COMBO']).mean()\n",
+    "combo.groupby(['INCIDENT_DISPATCH_AREA', 'COMBO']).count()"
    ]
   },
   {
